# surplusSense

./: .dockerignore  .gitignore  COC_DECISION_LOG.md  DEMO_SCRIPT.md  DIGITAL_TRANSFORMATION_DECK.md  Dockerfile  FINAL_SUBMISSION_PACKAGE.md  PILOT_VALIDATION_PLAN.md  README.md  SUBMISSION_CHECKLIST.md  generate_pptx.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: .coc-sync-marker  VERSION
app/: streamlit_app.py
data/: cluster_profiles.json  generate_synthetic_data.py  merchant_clusters.csv  merchant_features.csv  synthetic_fnb_data.csv
docs/: DEVELOPER_HANDOVER.md  EXECUTIVE_REPORT.md  INDIVIDUAL_REPORT.md  ROADMAP.md  USER_GUIDE.md  coc_decision_log.md  executive_report_notes.md  product_hardening_plan.md
models/: model_metadata.json
outputs/: cv_results.csv  feature_importance.csv  metrics_summary.csv  model_comparison.csv  model_results.csv  multi_seed_validation.csv  sample_recommendations.csv  surplus_model.pkl  tuning_results.csv  xgb_tuning_results.csv
scripts/: generate_report_figures.py
specs/: _index.md  authentication.md  consumer-experience.md  data-model.md  food-safety.md  marketplace.md  merchant-experience.md  ml-analytics.md  ml-recommendations.md  ml-surplus-prediction.md  notifications.md  payments.md  pricing.md
src/: data_generator.py  evaluate_model.py  feature_engineering.py  food_safety_rules.py  recommendation_engine.py  train_model.py
tests/unit/: test_data_generator.py  test_feature_engineering.py  test_food_safety_rules.py  test_leakage_awareness.py  test_model_training.py  test_recommendation_engine.py  (+1 more)
(+80 files in other folders)
