[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surplussense"
version = "1.0.0"
description = "Pilot-ready F&B surplus prediction and decision-support product for SMU MBA MGMT655."
authors = [{name = "Toh Zi Kai"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".*", "__pycache__*"]
